cmake_minimum_required(VERSION 3.14)

project(Enigma VERSION 1.3)

set(CMAKE_CXX_STANDARD 14)

set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/")

find_package(SDL2 REQUIRED)
find_package(SDL2_image REQUIRED)
find_package(SDL2_ttf REQUIRED)
find_package(SDL2_mixer REQUIRED)
find_package(xercesc REQUIRED)
find_package(zlib REQUIRED)
find_package(curl REQUIRED)

Include(FindIntl)

include_directories(${SDL2_INCLUDE_DIR}
    ${SDL2_IMAGE_INCLUDE_DIR}
    ${SDL2_TTF_INCLUDE_DIR}
    ${SDL2_MIXER_INCLUDE_DIR}
    ${XercesC_INCLUDE_DIRS}
    ${ZLIB_INCLUDE_DIRS}
    ${CURL_INCLUDE_DIRS})

add_compile_definitions(SYSTEM_DATA_DIR="")
add_compile_definitions(DOCDIR="")
add_compile_definitions(LOCALEDIR="")
add_compile_definitions(CXXLUA=1)

include_directories(lib-src/enet/include)
#include_directories(lib-src/enet/include/enet)
include_directories(lib-src/enigma-core)
include_directories(lib-src/lua)
include_directories(lib-src)
include_directories(lib-src/zipios++/src)
include_directories(lib-src/zipios++/)
include_directories(src)
include_directories(src/gui)
include_directories(src/lev)

add_subdirectory(lib-src)

configure_file(cmake-config.h.in config.h)
include_directories(${CMAKE_CURRENT_BINARY_DIR})

add_executable(enigma
    src/actors/Balls.cc
    src/actors/Balls.hh
    src/actors/BugActor.cc
    src/actors/BugActor.hh
    src/actors/HorseActor.cc
    src/actors/HorseActor.hh
    src/actors/KillerActor.cc
    src/actors/KillerActor.hh
    src/actors/Rotors.cc
    src/actors/Rotors.hh
    src/floors/BridgeFloor.cc
    src/floors/BridgeFloor.hh
    src/floors/FloodStream.cc
    src/floors/FloodStream.hh
    src/floors/ForwardFloor.hh
    src/floors/ScalesFloor.cc
    src/floors/ScalesFloor.hh
    src/floors/SimpleFloors.cc
    src/floors/SimpleFloors.hh
    src/floors/SlopeFloor.cc
    src/floors/SlopeFloor.hh
    src/floors/StandardFloors.cc
    src/floors/StandardFloors.hh
    src/floors/ThiefFloor.cc
    src/floors/ThiefFloor.hh
    src/gui/ErrorMenu.cc
    src/gui/ErrorMenu.hh
    src/gui/GameMenu.cc
    src/gui/GameMenu.hh
    src/gui/HelpMenu.cc
    src/gui/HelpMenu.hh
    src/gui/InfoMenu.cc
    src/gui/InfoMenu.hh
    src/gui/LevelInspector.cc
    src/gui/LevelInspector.hh
    src/gui/LevelMenu.cc
    src/gui/LevelMenu.hh
    src/gui/LevelPackComposer.cc
    src/gui/LevelPackComposer.hh
    src/gui/LevelPackConfig.cc
    src/gui/LevelPackConfig.hh
    src/gui/LevelPackMenu.cc
    src/gui/LevelPackMenu.hh
    src/gui/LevelPreviewCache.cc
    src/gui/LevelPreviewCache.hh
    src/gui/LevelWidget.cc
    src/gui/LevelWidget.hh
    src/gui/LPGroupConfig.cc
    src/gui/LPGroupConfig.hh
    src/gui/MainMenu.cc
    src/gui/MainMenu.hh
    src/gui/Menu.cc
    src/gui/Menu.hh
    src/gui/MonospacedLabel.cc
    src/gui/MonospacedLabel.hh
    src/gui/OptionsMenu.cc
    src/gui/OptionsMenu.hh
    src/gui/ScreenshotViewer.cc
    src/gui/ScreenshotViewer.hh
    src/gui/SearchMenu.cc
    src/gui/SearchMenu.hh
    src/gui/TextField.cc
    src/gui/TextField.hh
    src/gui/widgets.cc
    src/gui/widgets.hh
    src/items/BagItem.cc
    src/items/BagItem.hh
    src/items/BlockerItem.cc
    src/items/BlockerItem.hh
    src/items/Bomb.cc
    src/items/Bomb.hh
    src/items/Bottle.cc
    src/items/Bottle.hh
    src/items/BrakeItem.cc
    src/items/BrakeItem.hh
    src/items/BurnableItem.cc
    src/items/BurnableItem.hh
    src/items/Coin.cc
    src/items/Coin.hh
    src/items/CompatibilityItems.cc
    src/items/CompatibilityItems.hh
    src/items/Crack.cc
    src/items/Crack.hh
    src/items/CrossItem.cc
    src/items/CrossItem.hh
    src/items/DocumentItem.cc
    src/items/DocumentItem.hh
    src/items/Drop.cc
    src/items/Drop.hh
    src/items/Dynamite.cc
    src/items/Dynamite.hh
    src/items/Extinguisher.cc
    src/items/Extinguisher.hh
    src/items/ExtraLife.cc
    src/items/ExtraLife.hh
    src/items/GlassesItem.cc
    src/items/GlassesItem.hh
    src/items/Hammer.cc
    src/items/Hammer.hh
    src/items/Landmine.cc
    src/items/Landmine.hh
    src/items/Magnet.cc
    src/items/Magnet.hh
    src/items/Meditation.cc
    src/items/Meditation.hh
    src/items/PipeItem.cc
    src/items/PipeItem.hh
    src/items/PullerItem.cc
    src/items/PullerItem.hh
    src/items/RubberbandItem.cc
    src/items/RubberbandItem.hh
    src/items/SeedItem.cc
    src/items/SeedItem.hh
    src/items/Sensor.cc
    src/items/Sensor.hh
    src/items/ShogunDot.cc
    src/items/ShogunDot.hh
    src/items/SimpleItems.cc
    src/items/SimpleItems.hh
    src/items/StripItem.cc
    src/items/StripItem.hh
    src/items/SurpriseItem.cc
    src/items/SurpriseItem.hh
    src/items/Sword.cc
    src/items/Sword.hh
    src/items/TrapItem.cc
    src/items/TrapItem.hh
    src/items/Trigger.cc
    src/items/Trigger.hh
    src/items/Umbrella.cc
    src/items/Umbrella.hh
    src/items/Vortex.cc
    src/items/Vortex.hh
    src/items/WormHole.cc
    src/items/WormHole.hh
    src/lev/Index.cc
    src/lev/Index.hh
    src/lev/PersistentIndex.cc
    src/lev/PersistentIndex.hh
    src/lev/Proxy.cc
    src/lev/Proxy.hh
    src/lev/RatingManager.cc
    src/lev/RatingManager.hh
    src/lev/ScoreManager.cc
    src/lev/ScoreManager.hh
    src/lev/SubProxy.cc
    src/lev/SubProxy.hh
    src/lev/VolatileIndex.cc
    src/lev/VolatileIndex.hh
    src/others/CannonBall.cc
    src/others/CannonBall.hh
    src/others/CounterGadget.cc
    src/others/CounterGadget.hh
    src/others/Other.cc
    src/others/Other.hh
    src/others/Rubberband.cc
    src/others/Rubberband.hh
    src/others/TimerGadget.cc
    src/others/TimerGadget.hh
    src/others/Wire.cc
    src/others/Wire.hh
    src/stones/ActorImpulseStone.cc
    src/stones/ActorImpulseStone.hh
    src/stones/BarrierStone.cc
    src/stones/BarrierStone.hh
    src/stones/BlockerStone.cc
    src/stones/BlockerStone.hh
    src/stones/BoulderStone.cc
    src/stones/BoulderStone.hh
    src/stones/BoxStone.cc
    src/stones/BoxStone.hh
    src/stones/BrakeStone.cc
    src/stones/BrakeStone.hh
    src/stones/BreakStone.cc
    src/stones/BreakStone.hh
    src/stones/ChameleonStone.cc
    src/stones/ChameleonStone.hh
    src/stones/ChessStone.cc
    src/stones/ChessStone.hh
    src/stones/ClusterStone.cc
    src/stones/ClusterStone.hh
    src/stones/CoinSlot.cc
    src/stones/CoinSlot.hh
    src/stones/CompatibilityStones.cc
    src/stones/CompatibilityStones.hh
    src/stones/DeathStone.cc
    src/stones/DeathStone.hh
    src/stones/DiscoStone.cc
    src/stones/DiscoStone.hh
    src/stones/DispenserStone.cc
    src/stones/DispenserStone.hh
    src/stones/Door.cc
    src/stones/Door.hh
    src/stones/FakeStone.cc
    src/stones/FakeStone.hh
    src/stones/FlatStone.cc
    src/stones/FlatStone.hh
    src/stones/FloppySwitch.cc
    src/stones/FloppySwitch.hh
    src/stones/FourSwitch.cc
    src/stones/FourSwitch.hh
    src/stones/GhostStone.cc
    src/stones/GhostStone.hh
    src/stones/GlassStones.cc
    src/stones/GlassStones.hh
    src/stones/GreenBrownStone.cc
    src/stones/GreenBrownStone.hh
    src/stones/IceBlock.cc
    src/stones/IceBlock.hh
    src/stones/InkwellStone.hh
    src/stones/JambStone.cc
    src/stones/JambStone.hh
    src/stones/KeySwitch.cc
    src/stones/KeySwitch.hh
    src/stones/KnightStone.cc
    src/stones/KnightStone.hh
    src/stones/LaserStone.cc
    src/stones/LaserStone.hh
    src/stones/LaserSwitch.cc
    src/stones/LaserSwitch.hh
    src/stones/LightPassengerStone.cc
    src/stones/LightPassengerStone.hh
    src/stones/MagicStone.cc
    src/stones/MagicStone.hh
    src/stones/MailStone.cc
    src/stones/MailStone.hh
    src/stones/MirrorStone.cc
    src/stones/MirrorStone.hh
    src/stones/MonoFlopStone.cc
    src/stones/MonoFlopStone.hh
    src/stones/OneWayStone.cc
    src/stones/OneWayStone.hh
    src/stones/OxydStone.cc
    src/stones/OxydStone.hh
    src/stones/PassageStone.cc
    src/stones/PassageStone.hh
    src/stones/PlasterStone.cc
    src/stones/PlasterStone.hh
    src/stones/PolarSwitchStone.cc
    src/stones/PolarSwitchStone.hh
    src/stones/PortalStone.cc
    src/stones/PortalStone.hh
    src/stones/PullStone.cc
    src/stones/PullStone.hh
    src/stones/PuzzleStone.cc
    src/stones/PuzzleStone.hh
    src/stones/QuakeStone.cc
    src/stones/QuakeStone.hh
    src/stones/RotatorStone.cc
    src/stones/RotatorStone.hh
    src/stones/RubberbandStone.cc
    src/stones/RubberbandStone.hh
    src/stones/ScissorsStone.cc
    src/stones/ScissorsStone.hh
    src/stones/ShogunStone.cc
    src/stones/ShogunStone.hh
    src/stones/SimpleStones.cc
    src/stones/SimpleStones.hh
    src/stones/SpitterStone.cc
    src/stones/SpitterStone.hh
    src/stones/StandardStones.cc
    src/stones/StandardStones.hh
    src/stones/StoneImpulse.cc
    src/stones/StoneImpulse.hh
    src/stones/SurpriseStone.cc
    src/stones/SurpriseStone.hh
    src/stones/SwapStone.cc
    src/stones/SwapStone.hh
    src/stones/Switch.cc
    src/stones/Switch.hh
    src/stones/ThiefStone.cc
    src/stones/ThiefStone.hh
    src/stones/TimerStone.cc
    src/stones/TimerStone.hh
    src/stones/Turnstile.cc
    src/stones/Turnstile.hh
    src/stones/VolcanoStone.cc
    src/stones/VolcanoStone.hh
    src/stones/WindowStone.cc
    src/stones/WindowStone.hh
    src/stones/YieldingStone.cc
    src/stones/YieldingStone.hh
    src/actors.cc
    src/actors.hh
    src/actors_internal.hh
    src/AttributeDescriptor.cc
    src/AttributeDescriptor.hh
    src/client.cc
    src/client.hh
    src/client_internal.hh
    src/d_engine.hh
    src/d_follower.cc
    src/d_follower.hh
    src/d_models.cc
    src/d_models.hh
    src/display.cc
    src/display.hh
    src/display_internal.hh
    src/DOMErrorReporter.cc
    src/DOMErrorReporter.hh
    src/DOMSchemaResolver.cc
    src/DOMSchemaResolver.hh
    src/enigma.cc
    src/enigma.hh
    src/errors.hh
    src/file.cc
    src/file.hh
    src/file_zip.cc
    src/floors.cc
    src/floors.hh
    src/game.cc
    src/game.hh
    src/GridObject.cc
    src/GridObject.hh
    src/Inventory.cc
    src/Inventory.hh
    src/ItemHolder.hh
    src/items.cc
    src/items.hh
    src/KindDescriptor.cc
    src/KindDescriptor.hh
    src/laser.cc
    src/laser.hh
    src/LocalToXML.cc
    src/LocalToXML.hh
    src/lua-display.cc
    src/lua-display.hh
    src/lua-ecl.cc
    src/lua-ecl.hh
    src/lua-enigma.cc
    src/lua-enigma.hh
    src/lua-global.cc
    src/lua-global.hh
    src/lua.cc
    src/lua.hh
    src/main.cc
    src/main.hh
    src/MessageDescriptor.cc
    src/MessageDescriptor.hh
    src/MusicManager.cc
    src/MusicManager.hh
    src/net_enet.cc
    src/netgame.cc
    src/netgame.hh
    src/network.cc
    src/network.hh
    src/nls.cc
    src/nls.hh
    src/Object.cc
    src/Object.hh
    src/ObjectValidator.cc
    src/ObjectValidator.hh
    src/options.cc
    src/options.hh
    src/ox_extra.cc
    src/ox_magnum.cc
    src/ox_oxyd1.cc
    src/ox_peroxyd.cc
    src/oxyd.cc
    src/oxyd.hh
    src/oxyd_internal.hh
    src/player.cc
    src/player.hh
    src/PreferenceManager.cc
    src/PreferenceManager.hh
    src/PropertyManager.cc
    src/PropertyManager.hh
    src/resource_cache.cc
    src/resource_cache.hh
    src/server.cc
    src/server.hh
    src/SoundEffectManager.cc
    src/SoundEffectManager.hh
    src/SoundEngine.cc
    src/SoundEngine.hh
    src/StateManager.cc
    src/StateManager.hh
    src/StateObject.cc
    src/StateObject.hh
    src/stones.cc
    src/stones.hh
    src/stones_internal.hh
    src/timer.cc
    src/timer.hh
    src/Utf8ToXML.cc
    src/Utf8ToXML.hh
    src/utilXML.cc
    src/utilXML.hh
    src/Value.cc
    src/Value.hh
    src/video.cc
    src/video.hh
    src/video_effects.cc
    src/video_effects.hh
    src/world.cc
    src/world.hh
    src/world_internal.hh
    src/WorldProxy.cc
    src/WorldProxy.hh
    src/XMLtoLocal.cc
    src/XMLtoLocal.hh
    src/XMLtoUtf8.cc
    src/XMLtoUtf8.hh
    )

target_link_libraries(enigma ${SDL2_LIBRARY}
    ${SDL2_MIXER_LIBRARIES}
    ${SDL2_IMAGE_LIBRARIES}
    ${SDL2_TTF_LIBRARIES}
    ${XercesC_LIBRARIES}
    ${ZLIB_LIBRARIES}
    ${CURL_LIBRARIES}
    ${Intl_LIBRARIES}
    enet
    enigma-core
    lua
    oxydlib
    zipios++
    )
